--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <div class="nav navbar-nav">
-            <%= link_to '<img class= "logo-in-nav" src="/logo-reverse.png" alt="Home"/>'.html_safe, welcome_index_path %>
+            <%= link_to '<img class= "logo-in-nav" src="/logo-reverse-transparent.png" alt="Home"/>'.html_safe, welcome_index_path %>
         </div>
 
         <div>
