--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= csrf_meta_tags %>
 
   <!---  <link rel="stylesheet" type="text/css" href="application.css">
-    <script src="application.js" type="text/javascript"></script> --->
+    <script src="application.js" type="text/javascript"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -36,8 +36,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <% if current_user %>
-                  <li class="submenu"><%= link_to "Settings", edit_user_path(current_user)%> <!--- TODO fix paths---></li>
-                  <li class="submenu"><%= link_to "Favorite Recipes", my_recipes_user_path(current_user)%></li>
+                  <li class="submenu"><%= link_to "Settings", edit_user_path(current_user)%> <!--- TODO fix paths --></li>
                   <li class="submenu"><%= link_to "Recommended Recipes", home_user_path(current_user) %></li>
                   <li class="submenu"><%= link_to "Favorite Recipes",  my_recipes_user_path(current_user) %></li>
                   <% if current_user.role == 2 %>
