--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,20 @@
 
     <div class="nav-fixer">
     <ul class="topnav" id="topNavBar_left">
-<!---      <li class="left"><a href="Home">Home</a></li> --->
+<!---      <li class="left"><a href="Home">Home</a></li> -->
       <%= link_to '<img  class= "logo-in-nav" src="/logo-reverse.png" alt="Home"/>'.html_safe, welcome_index_path %>
-  <!---    <li class="left"><input type="text" name="keyword"></li>
-      <li class="left"><input type="submit" value="Search"></li> -->
+      <!-- <li class="left"><input type="text" name="keyword"></li> -->
+      <li class="left">
+        <!-- <input type="submit" value="Search"> -->
+        <%if current_user.present?%>
+          <%= form_tag home_user_path, :method => 'get' do %>
+            <p>
+              <%= text_field_tag :search, params[:search], class: "left" %>
+              <%= submit_tag "Search", :name => nil, class: "left" %>
+            </p>
+          <% end %>
+        <% end %>  
+      </li>
       <li class="account">
         <a href="#" class="dropButton">Account</a>
         <div id="accountDropDownItems" class="dropDownContent">
