--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,17 @@
-
 <div class="container">
   <p id="notice"><%= notice %></p>
 
   <h1>Users</h1>
 <table class="table">
+
   <thead>
     <tr>
       <th>Username</th>
       <th>Email</th>
       <th>Healthlabel</th>
       <th>Dietlabel</th>
+      <th>Password</th>
+      <th>Preference</th>
       <th colspan="3"></th>
     </tr>
   </thead>
