--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -72,7 +72,7 @@ function tableData(r) {
     tdata += '<td> <a target="_blank" href="'+r["url"]+'">'+r["label"]+' </a></td>'
     tdata += ' <td> '+r["healthLabels"] +' </td>'
     tdata += '<td> '+r["dietLabels"] + '</td>'
-    tdata += ' <td><a href="javascript:void(0);"> Saved </a>'
+    tdata += '<td><i class="material-icons">save</i><a href="javascript:void(0);" onclick="save_recipe($(this),'+"'"+r['uri']+"'"+')">Save recipe</a>'
     tdata += '</td>'
     tdata += '</tr>'
   return tdata
